--- a/css/_static-d4.css
+++ b/css/_static-d4.css
@@ -3,3 +3,11 @@ body a {overflow:visible !important;}
 .reveal p, .reveal ol, .reveal ul {
   text-shadow: 0 1px 1px hsla(0, 0%, 0%, .5);
 }
+
+.reveal h1 .roll {
+  line-height: 1;
+}
+
+.reveal h1 {
+  line-height: 1;
+}
